--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
  <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>Títol de la pàgina</title>
 </head>
 <body>
 
@@ -16,6 +16,9 @@
 
 
  <iframe src="./maps/first/index.html" title="Mapa 1" width="100%" height="300" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" style="border:none;">
+ </iframe>
+ 
+<iframe src="./maps/popups-with-photo/index.html" title="Mapa 1" width="100%" height="300" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" style="border:none;">
  </iframe>
 
 </body>
